infra/k8s/notification_handler/skillsly-notification-mq-depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skillsly_notification_mq_depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skillsly_notification_mq
  template:
    metadata:
      labels:
        app: skillsly_notification_mq
    spec:
      containers:
        - name: skillsly_notification_mq
          image: rabbitmq:3.10-rc-management-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: skillsly-notification-mq-srv
spec:
  selector:
    app: skillsly-notification-mq
  ports:
    - name: rabbit-mq
        protocol: TCP
        port: 5672
        targetPort: 5672
    - name: rabbit-mq-management
        protocol: TCP
        port: 15672
        targetPort: 15672
