infra/k8s/notification_handler/skillsly_notification_handler_redis_commander_depl.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-commander-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander:latest
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander-srv
spec:
  selector:
    app: redis-commander
  ports:
    - name: redis-commander
      protocol: TCP
        port: 8081
        targetPort: 8081
